fix: less scrollbar height within posts, slightly wider blockquote border-left

--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -127,7 +127,7 @@
 
   blockquote {
     padding-left: 10px;
-    border-left: 1px solid var(--hiq-color-success);
+    border-left: 2px solid var(--hiq-color-success);
     margin: 20px 0;
 
     span,
@@ -136,5 +136,9 @@
       font-style: italic;
       font-size: calc(var(--hiq-unitless-max-font-size, 16) * 1px);
     }
+  }
+
+  ::-webkit-scrollbar {
+    height: 5px;
   }
 }
